@@ -1,3 +1,14 @@
+2007-12-22  Eric Hodel  <drbrain@segment7.net>
+
+	* lib/rubygems/commands/environment_command.rb:  Put GEM PATHS in the
+	correct order.
+	* lib/rubygems/commands/uninstall_command.rb:  Add --install-dir to
+	specify which local repository to uninstall from.  Patch #15151 by
+	Donavan Pantke.
+	* lib/rubygems/uninstaller.rb:  Only allow uninstallation of gems from
+	specified directory.  Properly clean up executables on uninstall.
+	Patch #15151 by Donavan Pantke.
+
 2007-12-21  Eric Hodel  <drbrain@segment7.net>
 
 	* util/gem_prelude.rb:  Place bin before lib so bin stubs work.
